--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
+
+@import url('https://fonts.googleapis.com/css?family=Cinzel|Poiret+One');
+
+html,body{
+	min-height: 100%;
+}
+body{
+	background: linear-gradient(#F0DEE3,#F0E2DE);
+}
+
+h1{
+	font-family: 'Cinzel', serif;
+	font-weight: 400;
+}
+
+
+h2{
+  font-family: 'Poiret One', cursive;
+	font-weight: 400;
+}
+
 #menu{
 	position: fixed;
 	bottom:2rem;
 	right:2.5rem;
+}
+
+.bg-azul{
+	background:rgba(255, 160, 122, 1.00)
 }
